--- a/src/MTC4PF/.vscode/settings.json
+++ b/src/MTC4PF/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "C_Cpp.clang_format_style": "{ BasedOnStyle: LLVM, IndentWidth: 4, ColumnLimit: 0,AllowShortFunctionsOnASingleLine: true,BreakBeforeBraces: Custom, BraceWrapping: {AfterFunction:  true, AfterClass: true }}",	
+    "C_Cpp.clang_format_style": "{ BasedOnStyle: LLVM, IndentWidth: 4, ColumnLimit: 0,AllowShortFunctionsOnASingleLine: true,BreakBeforeBraces: Custom, BraceWrapping: {AfterFunction:  true, AfterClass: true }}",
+    "cmake.configureOnOpen": false,
+    
 }
