Fixing build issues

--- a/src/MTC4BT/platformio.ini
+++ b/src/MTC4BT/platformio.ini
@@ -31,7 +31,8 @@ build_flags =
 	-DARDUINOJSON_ENABLE_COMMENTS=1
 	-Iinclude
 monitor_speed = 115200
-
+upload_com_port = COM3
+additional_build_flags =
 
 [env:az-delivery-devkit-v4]
 board = az-delivery-devkit-v4
