Update example config

--- a/src/MTC4BT/data_example/network_config.json
+++ b/src/MTC4BT/data_example/network_config.json
@@ -52,6 +52,8 @@
 		"broker": "192.168.x.y",
 		"port": 1883,
 		"keepalive": 10,
-		"ping": 0
+		"ping": 0,
+		"user": "dummyuser",
+		"password": "dummypassword"
 	}
 }
