--- a/src/MTC4BT/data_example/network_config.json
+++ b/src/MTC4BT/data_example/network_config.json
@@ -34,6 +34,8 @@
 			- "hostname":			Hostname used by this controller on your WiFi network (optional, default: generated controller name).
 			- "otaPassword":		Password required to update this controller over-the-air (required).
 			- "wait":				Delay in milliseconds between WiFi connect attempts (optional, default: 500).
+			- "user":				Username for MQTT connection (optional)
+			- "password":			Password for MQTT connection (optional)
 		*/
 		"SSID": "xxxxxx",
 		"password": "xxxxxx",
